[project]
name = "email-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-limiter>=3.13",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
